# afterglow_firmware

./: .gitignore  Cargo.lock.license  Cargo.toml  README.md  build.rs  embed.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
src/: ble.rs  boards.rs  main.rs
src/ble/: advertise.rs  gatt_server.rs  host.rs
src/ble/services/: device_information.rs
src/boards/: nougat_c3.rs
