# SPDX-FileCopyrightText: 2025 Derek Sauer
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "afterglow_firmware"
version = "0.1.0"
authors = ["Derek Sauer <dereksauer.ca@gmail.com>"]
edition = "2024"
rust-version = "1.85"
description = "Firmware for the Afterglow monitor backlighting device."
documentation = "https://github.com/dereksauer/afterglow-firmware"
readme = "README.md"
repository = "https://github.com/dereksauer/afterglow-firmware"
license = "GPL-3.0-or-later"

[[bin]]
name = "afterglow_firmware"
harness = false

[dependencies]
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-executor = { version = "0.7.0", features = ["defmt"] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }
embassy-sync = { version = "0.7.0", features = ["defmt"] }
embassy-time = { version = "0.4.0", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
esp-backtrace = { version = "0.15.1", features = [
  "defmt",
  "esp32c3",
  "panic-handler",
] }
esp-hal = { version = "1.0.0-beta.0", features = [
  "defmt",
  "esp32c3",
  "unstable",
] }
esp-hal-embassy = { version = "0.7.0", features = ["defmt", "esp32c3"] }
esp-wifi = { version = "0.13.0", features = ["defmt", "ble", "esp32c3"] }
trouble-host = { version = "0.1.0", default-features = false, features = [
  "default-packet-pool",
  "defmt",
  "derive",
  "gatt",
  "peripheral",
] }

[patch.crates-io]
esp-backtrace = { git = "https://github.com/esp-rs/esp-hal", rev = "68986d375c5c2733af0704c331512a633fae3bce" }
esp-hal = { git = "https://github.com/esp-rs/esp-hal", rev = "68986d375c5c2733af0704c331512a633fae3bce" }
esp-hal-embassy = { git = "https://github.com/esp-rs/esp-hal", rev = "68986d375c5c2733af0704c331512a633fae3bce" }
esp-wifi = { git = "https://github.com/esp-rs/esp-hal", rev = "68986d375c5c2733af0704c331512a633fae3bce" }
trouble-host = { git = "https://github.com/embassy-rs/trouble.git", rev = "cb4b2cd424cdb2af54bad52922798a58d8786d7f" }

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
lto = 'fat'
overflow-checks = false
