# SPDX-FileCopyrightText: 2025 Derek Sauer
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "afterglow_firmware"
version = "0.1.0"
authors = ["Derek Sauer <dereksauer.ca@gmail.com>"]
edition = "2024"
rust-version = "1.85"
description = "Firmware for the Afterglow monitor backlighting device."
documentation = "https://github.com/dereksauer/afterglow-firmware"
readme = "README.md"
repository = "https://github.com/dereksauer/afterglow-firmware"
license = "GPL-3.0-or-later"

[[bin]]
name = "afterglow_firmware"
harness = false

[dependencies]
# Cross platform crates.
bt-hci = { version = "0.3.2", features = ["defmt", "embassy-time"] }
defmt = "1.0"
defmt-rtt = "1.0"
embassy-executor = { version = "0.7", features = ["defmt", "nightly"] }
embassy-futures = { version = "0.1", features = ["defmt"] }
embassy-sync = { version = "0.7", features = ["defmt"] }
embassy-time = { version = "0.4", features = ["defmt"] }
static_cell = "2.1"
trouble-host = { version = "0.2.3", default-features = false, features = ["default-packet-pool", "defmt", "derive", "gatt", "peripheral", "security"] }

# ESP32 specific crates (enabled via the `esp` feature along with a chip specific `esp32xx` feature).
esp-alloc = { version = "0.8", features = ["defmt"], optional = true }
esp-backtrace = { version = "0.16", features = ["defmt", "exception-handler", "panic-handler"], optional = true }
esp-hal = { version = "1.0.0-beta.1", features = ["defmt", "unstable"], optional = true }
esp-hal-embassy = { version = "0.8", features = ["defmt"], optional = true }
esp-wifi = { version = "0.14", features = ["defmt", "ble"], optional = true }

[features]
default = ["nougat-c3", "clockless_leds"]

# Enable when building for the Breadstick Innovation's Nougat C3-Mini LED controller.
# https://shop.breadstick.ca/products/nougat-c3-mini
nougat-c3 = ["esp", "esp32c3"]

# Enable one of these features to match the type of LEDs you are using.
clockless_leds = [] # Clocked LEDs such as the WS2812 or SK6812.
clocked_leds = []   # Clocked LEDs such as the APA102.

# Enabled for all ESP32 platforms.
esp = [
    "dep:esp-alloc",
    "dep:esp-backtrace",
    "dep:esp-hal",
    "dep:esp-hal-embassy",
    "dep:esp-wifi",
]

# Enabled for the ESP32C3 chip.
esp32c3 = [
    "esp-backtrace?/esp32c3",
    "esp-hal?/esp32c3",
    "esp-hal-embassy?/esp32c3",
    "esp-wifi?/esp32c3",
]

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = "s"
overflow-checks = false

# ESP's documentation recommends enabling optimizations
# even in debug builds to avoid timing problems.
[profile.dev]
opt-level = "s"
